# knowledge-space-agent

./: .env.template  .gitignore  Caddyfile  README.md  Users - Shortcut.lnk  docker-compose.yml  local_knowledge.json  main.py  pyproject.toml
backend/: Dockerfile  agents.py  chat_storage.py  comparison.py  config.py  deduplication_testing.py  demo_ttfr.py  knowledgespace_api.py  ks_search_tool.py  local_retriever.py  main.py  neo4j_search_tool.py  requirements.txt  response_cache.py  retrieval.py  rrf.py  seed_graph.py  test_run.py  test_ttfr_estimator.py  ttfr_estimator.py
backend/tests/: conftest.py  test_health.py  test_metadata_rerank.py  test_query.py  test_rrf.py
chat-ks-agent/: package-lock.json  package.json
chat-ks-agent/src/: App.tsx  Chat.css  Chat.tsx
data_processing/: embedding_model_768.py  full_pipeline.py  process_all_chunks.py  push_to_bq.py  vectorstore.py
data_processing/preprocess/: scr_017041_sparc.py
examples/: README.md  basic_demo.py  local_knowledge.json
frontend/: nginx.conf  package-lock.json
frontend/google-cloud-sdk/: install.sh
frontend/google-cloud-sdk/.install/: bundled-python3-unix-linux-x86_64.snapshot.json  bundled-python3-unix.snapshot.json  gcloud-crc32c-linux-x86_64.snapshot.json  gcloud-deps-linux-x86_64.snapshot.json
frontend/src/: App.tsx  styles.css
frontend/src/utils/: ErrorHandler.ts
scripts/: verify_ttfr_m1_m2.sh
tests/: local_agent_runner.py  local_knowledge.json  test_chat.py  test_chat_storage.py  test_general.py  test_health.py  test_knowledges_api.py  test_neo4j_tool.py  test_response_cache.py  test_session_lifecycle.py  test_ttfr_estimator.py
