[project]
name = "knowledgespaceagent"
version = "0.1.0"
description = "Assistant"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "aiohttp>=3.12.15",
    "bs4>=0.0.2",
    "db-dtypes>=1.4.3",
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.115.12",
    "fuzzywuzzy>=0.18.0",
    "google-cloud-aiplatform>=1.58.0",
    "google-cloud-storage>=2.17.0",
    "google-generativeai>=0.8.5",
    "ipykernel>=6.29.5",
    "langchain>=0.3.27",
    "langgraph>=0.6.4",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=3.0.0",
    "sqlalchemy>=2.0.42",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
